--- a/GFClockWPF/MainWindow.xaml
+++ b/GFClockWPF/MainWindow.xaml
@@ -3,7 +3,9 @@
         xmlns:ClockControls="clr-namespace:GFClock.Controls"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Dad's Grandfather Clock" ResizeMode="NoResize">
+        Width="400" Height="400"
+        MinWidth="200" MinHeight="200"
+        Title="Dad's Grandfather Clock">
 
     <Window.Resources>
 
@@ -78,18 +80,22 @@
     <Grid>
         <!-- Barker Todo: Remove all this fixed size stuff. -->
         <ClockControls:ClockFace Grid.Row="0" x:Name="ClockFace" 
-                Width="400"
                 MouseLeftButtonDown="ClockFace_MouseLeftButtonDown">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="400" />
+                    <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <ClockControls:ClockPartImage x:Name="ClockFaceImage" Style="{StaticResource ClockFaceStyle}" />
+                <ClockControls:ClockPartImage x:Name="ClockFaceImage" Style="{StaticResource ClockFaceStyle}" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" SizeChanged="ClockFace_SizeChanged" />
+                
+                <!-- Specify the actual sizes of the clock hand images, and translate/rotate/scale as necessary. -->
                 <ClockControls:ClockPartImage x:Name="BigHand" Style="{StaticResource BigHandStyle}"
-                        Height="165" Width="24" />
+                        Height="281" Width="49"
+                        HorizontalAlignment="Center" VerticalAlignment="Center" />
                 <ClockControls:ClockPartImage x:Name="SmallHand" Style="{StaticResource SmallHandStyle}" 
-                        Height="136" Width="24" />
+                        Height="232" Width="56"
+                        HorizontalAlignment="Center" VerticalAlignment="Center" />
                 <!-- If this app needs to run on machines where the LiveSetting is not available,
                      consider whether use of the ClockControls:NotificationTextBlock would be
                      useful to you and your customers. -->
